tests/snapshots/integration__integration_tests__directives__switch_internal_powershell_directive.snap
---
source: tests/integration_tests/directives.rs
info:
  program: wt
  args:
    - "--internal=powershell"
    - switch
    - feature
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
Set-Location '[PATH]'

----- stderr -----
✅ [32m[32mSwitched to [1mfeature[22m @ [1m[REPO].feature[39m[22m[39m
